tests/cli_renderer_width_40/cli_renderer_width_40.exp
Error --------------------- basic.js:6:2

Cannot cast `null` to empty because
null [1] is incompatible with empty [2].

   basic.js:6:2
   6| (null: empty); // Error: null ~> empty
       ^^^^ [1]

References:
   basic.js:6:8
   6| (null: empty); // Error: null ~> empty
             ^^^^^ [2]


Error - name/that/gets/very/close.js:6:2

Cannot cast `null` to empty because
null [1] is incompatible with empty [2].

   name/that/gets/very/close.js:6:2
   6| (null: empty); // Error: null ~> empty
       ^^^^ [1]

References:
   name/that/gets/very/close.js:6:8
   6| (null: empty); // Error: null ~> empty
             ^^^^^ [2]


Error ----------------------------------
name/that/gets/very/close2.js:6:2

Cannot cast `null` to empty because
null [1] is incompatible with empty [2].

   name/that/gets/very/close2.js:6:2
   6| (null: empty); // Error: null ~> empty
       ^^^^ [1]

References:
   name/that/gets/very/close2.js:6:8
   6| (null: empty); // Error: null ~> empty
             ^^^^^ [2]


Error - name_that_gets_very_close.js:6:2

Cannot cast `null` to empty because
null [1] is incompatible with empty [2].

   name_that_gets_very_close.js:6:2
   6| (null: empty); // Error: null ~> empty
       ^^^^ [1]

References:
   name_that_gets_very_close.js:6:8
   6| (null: empty); // Error: null ~> empty
             ^^^^^ [2]


Error ----------------------------------
name_that_gets_very_close2.js:6:2

Cannot cast `null` to empty because
null [1] is incompatible with empty [2].

   name_that_gets_very_close2.js:6:2
   6| (null: empty); // Error: null ~> empty
       ^^^^ [1]

References:
   name_that_gets_very_close2.js:6:8
   6| (null: empty); // Error: null ~> empty
             ^^^^^ [2]


Error ------ non_breakable_breaks.js:7:2

Cannot cast
`reallyReallyReallyReallyReallyReallyRea
llyReallyLongVariableName` to empty
because number [1] is incompatible with
empty [2].

   non_breakable_breaks.js:7:2
   7| (reallyReallyReallyReallyReallyReallyReallyReallyLongVariableName: empty);
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   non_breakable_breaks.js:6:74
   6| const reallyReallyReallyReallyReallyReallyReallyReallyLongVariableName = 42;
                                                                               ^^ [1]
   non_breakable_breaks.js:7:68
   7| (reallyReallyReallyReallyReallyReallyReallyReallyLongVariableName: empty);
                                                                         ^^^^^ [2]


Error ----- non_breakable_breaks.js:10:2

Cannot cast
`reallyReallyReallyReallyReallyReallyRea
llyReallyReallyReallyReallyReallyReallyR
eallyReallyReallyLongVariableName` to
empty because number [1] is incompatible
with empty [2].

   non_breakable_breaks.js:10:2
   10| (reallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyLongVariableName: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   non_breakable_breaks.js:9:122
    9| const reallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyLongVariableName = 42;
                                                                                                                                ^^ [1]
   non_breakable_breaks.js:10:116
   10| (reallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyLongVariableName: empty);
                                                                                                                          ^^^^^ [2]


Error ----- non_breakable_breaks.js:13:2

Cannot cast
`abcdefghijklmnopqrstuvwxyzabcdefghijkl`
to empty because number [1] is
incompatible with empty [2].

   non_breakable_breaks.js:13:2
   13| (abcdefghijklmnopqrstuvwxyzabcdefghijkl: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   non_breakable_breaks.js:12:48
   12| const abcdefghijklmnopqrstuvwxyzabcdefghijkl = 42;
                                                      ^^ [1]
   non_breakable_breaks.js:13:42
   13| (abcdefghijklmnopqrstuvwxyzabcdefghijkl: empty);
                                                ^^^^^ [2]


Error ----- non_breakable_breaks.js:16:2

Cannot cast
`abcdefghijklmnopqrstuvwxyzabcdefghijklm
` to empty because number [1] is
incompatible with empty [2].

   non_breakable_breaks.js:16:2
   16| (abcdefghijklmnopqrstuvwxyzabcdefghijklm: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   non_breakable_breaks.js:15:49
   15| const abcdefghijklmnopqrstuvwxyzabcdefghijklm = 42;
                                                       ^^ [1]
   non_breakable_breaks.js:16:43
   16| (abcdefghijklmnopqrstuvwxyzabcdefghijklm: empty);
                                                 ^^^^^ [2]


Error ----- non_breakable_breaks.js:19:2

Cannot cast `mnopqrstuvwxyzabcdefghijkl`
to empty because number [1] is
incompatible with empty [2].

   non_breakable_breaks.js:19:2
   19| (mnopqrstuvwxyzabcdefghijkl: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   non_breakable_breaks.js:18:36
   18| const mnopqrstuvwxyzabcdefghijkl = 42;
                                          ^^ [1]
   non_breakable_breaks.js:19:30
   19| (mnopqrstuvwxyzabcdefghijkl: empty);
                                    ^^^^^ [2]


Error ----- non_breakable_breaks.js:22:2

Cannot cast
`mnopqrstuvwxyzabcdefghijklm` to empty
because number [1] is incompatible with
empty [2].

   non_breakable_breaks.js:22:2
   22| (mnopqrstuvwxyzabcdefghijklm: empty);
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   non_breakable_breaks.js:21:37
   21| const mnopqrstuvwxyzabcdefghijklm = 42;
                                           ^^ [1]
   non_breakable_breaks.js:22:31
   22| (mnopqrstuvwxyzabcdefghijklm: empty);
                                     ^^^^^ [2]


Error ----------------------------------
really/long/filename/that/is/much/more/then/40/characters.js:6:2

Cannot cast `null` to empty because
null [1] is incompatible with empty [2].

   really/long/filename/that/is/much/more/then/40/characters.js:6:2
   6| (null: empty); // Error: null ~> empty
       ^^^^ [1]

References:
   really/long/filename/that/is/much/more/then/40/characters.js:6:8
   6| (null: empty); // Error: null ~> empty
             ^^^^^ [2]


Error ----------------------------------
really_long_filename_that_is_much_more_then_40_characters.js:6:2

Cannot cast `null` to empty because
null [1] is incompatible with empty [2].

   really_long_filename_that_is_much_more_then_40_characters.js:6:2
   6| (null: empty); // Error: null ~> empty
       ^^^^ [1]

References:
   really_long_filename_that_is_much_more_then_40_characters.js:6:8
   6| (null: empty); // Error: null ~> empty
             ^^^^^ [2]


Error -------------------- wrap.js:21:64

Cannot cast object literal to object
type because number [1] is incompatible
with string [2] in property
`breaks.on.multiple.lines` of index 0 of
property
`long.error.message.that.hopefully` of
index 0 of property `to.be.a.really` of
index 0 of property `this.is.going`.

   wrap.js:21:64
   21|                               {breaks: {on: {multiple: {lines: 42}}}},
                                                                      ^^ [1]

References:
   wrap.js:51:64
   51|                               {breaks: {on: {multiple: {lines: string}}}},
                                                                      ^^^^^^ [2]


Error -------------- wrap_group.js:21:68

Cannot cast object literal to object
type because number [1] is incompatible
with string [2] in property
`breaks.on.multiple.lines.a` of index 0
of property
`long.error.message.that.hopefully` of
index 0 of property `to.be.a.really` of
index 0 of property `this.is.going`.

   wrap_group.js:21:68
   21|                               {breaks: {on: {multiple: {lines: {a: 1, b: 2}}}}},
                                                                          ^ [1]

References:
   wrap_group.js:54:59
   54|                                     multiple: {lines: {a: string, b: string}},
                                                                 ^^^^^^ [2]


Error -------------- wrap_group.js:21:74

Cannot cast object literal to object
type because number [1] is incompatible
with string [2] in property
`breaks.on.multiple.lines.b` of index 0
of property
`long.error.message.that.hopefully` of
index 0 of property `to.be.a.really` of
index 0 of property `this.is.going`.

   wrap_group.js:21:74
   21|                               {breaks: {on: {multiple: {lines: {a: 1, b: 2}}}}},
                                                                                ^ [1]

References:
   wrap_group.js:54:70
   54|                                     multiple: {lines: {a: string, b: string}},
                                                                            ^^^^^^ [2]



Found 16 errors
